# AutoSOM

./: .gitignore  README.md  improvements.txt  pyproject.toml  requirements.txt  sandbox.ipynb  setup.py  visualize_results.ipynb
.github/workflows/: ci.yml  code_check.yml
autosom/: autosom.py  complex_annotator.py
data/: metatrans.csv
output/metatrans/: logs.txt
scripts/: run.py
soman/: __init__.py  annotator.py  soman.py  utils.py
soman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  addition_annotator.py  annotator.py  autosom.py  base_annotator.py  complex_annotator.py  elimination_annotator.py  glutathione_annotator.py  oxidative_dehalogenation_annotator.py  pilot_annotator.py  redox_annotator.py  soman.py  utils.py
tests/: test_annotators.py  test_autosom.py  test_base_annotator.py  test_utils.py
