[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "soman"
version = "2025.1.0"
description = "Annotates the Sites of Metabolism (SoMs) of substrate-metabolite pairs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]

dependencies = [
  "networkx>=3.3",
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "rdkit>=2024.3.1",
  "tqdm>=4.1.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pylint",
  "pydocstyle",
]
vis = [
  "ipykernel", 
  "ipywidgets"
]

[tool.pylint.messages-control]
disable = [
    "E0611",  # No name '...' in module '...' (import errors related to RDKit)
]