[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "soman"
version = "0.0.1"
description = "Annotates the Sites of Metabolism (SoMs) of substrate-metabolite pairs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]

dependencies = [
  "chembl_structure_pipeline>=1.2.2",
  "networkx>=3.3",
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "rdkit>=2024.3.1",
  "tqdm>=4.1.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pylint",
  "pydocstyle",
]
vis = [
  "ipykernel", 
  "ipywidgets"
]

[tool.isort]
profile = "black"

[tool.pylint.messages-control]
disable = [
  "c-extension-no-member",  # errors related to RDKit
  "no-name-in-module",  # errors related to RDKit
  "no-member",  # errors related to RDKit
  "duplicate-code",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "too-many-instance-attributes",
  "too-many-branches",
  "line-too-long", # this is annoying for logging messages
]

[tool.pydocstyle]
ignore = [
  "D107",  # Missing docstring in __init__
]
